selector-mobile-fix
Fixed plot selector in mobile, still not responsive

--- a/src/app/css/app_style.css
+++ b/src/app/css/app_style.css
@@ -1,9 +1,9 @@
 /*General*/
 
 #app {
-
+   
     flex-direction: row;
-    margin-left: 4em;
+    margin-left:4em;
     margin-top: 2.25em;
     margin-right: 4em;
 }
@@ -18,54 +18,24 @@
 
 }
 
-#div_h2 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-}
-#div_h2buttons {
-    display: flex;
-    flex-direction: row;
-    align-content: space-between;
-    align-items: flex-end;
-}
-#div_h2buttons button a {
-    display: flex;
-    align-self: flex-end;
-}
-
-
-/*map
-  
-            this.text.innerHTML += "<tr><a href='javascript:centerPlot(" + `${plot.id}` + ")'>" + '<td data-label="Empresa">' + `${plot.name}` + '</a></td><td data-label="Nombre Parcela">'+ "<button style='float:center;' type='button' onclick='borrar(" + `${plot.id}` + ")'>Borrar</button></td></tr>"
-
-
-*/
-
 #tab {
-    overflow-y: scroll;
+    overflow: scroll;
     min-width: 200px;
-    display: flex;
-    align-self: center;
-    width: 300px;
-    height: 370px;
+    width: 320px;
+    height: 400px;
     margin-left: 2em;
-    margin-right: 2em;
-    overflow-x: hidden;
-
 }
 
 #map {
     width: 100em;
     height: 25em;
     border: solid white;
-    border-radius: 10px;
 
 }
 
 #graphic_dates {
     display: flex;
+    
     border: solid black;
 }
 
@@ -73,6 +43,8 @@
     display: flex;
     align-items: center;
 }
+
+
 
 /*Graph*/
 
@@ -90,16 +62,12 @@
     margin: inherit;
 }
 
-.data {
+.chart-container {
     height: 13em;
-    width: 13000px;
+    width: 100%;
     margin-left: 0em;
 }
 
-.links_parcelas{
-    text-decoration: none;
-    color: #000000;
-}
 /*Buttons/*/
 
 #button {
@@ -125,119 +93,68 @@
 }
 
 
-/*Graph data/*/
 
-
-#humidity {
-    display: none;
-    border: 1px solid olive;
-}
-
-#salinity {
-    display: none;
-    border: 1px solid rebeccapurple;
-}
-
-#rainfall {
-    display: none;
-    border: 1px solid blue;
-}
-
-#temperature {
-    display: none;
-    border: 1px solid chocolate;
-}
-
-#pressure {
-    display: none;
-    border: 1px solid yellow;
-}
 
 /*Talbe data*/
 
 table {
+    overflow: scroll;
+    border: 1px solid #ccc;
+    border-collapse: collapse;
+    margin-left: 0.5em;
+    margin-right: 0.5em;
 
-   /* border: 1px solid #ccc;*/
     /* padding: 0; */
-    margin: 5px;
-    width: 250em;
-    height: auto;
-
-
-
+    width: 150px;
+    max-height: 320px;
+    table-layout: fixed;
 }
 
+table caption {
+    font-size: 1.5em;
+    margin: .5em 0 .75em;
+}
 
 table tr {
-
     background-color: #f8f8f8;
+    border: 1px solid #ddd;
     padding: .35em;
 }
 
 table th,
 table td {
     padding: .625em;
- 
-    border: none;
+    text-align: center;
 }
-
-table input{
-    visibility: hidden;
-}
-table tr:hover .delete-button {
-
-}
-
-table tr:hover .edit-button {
-    opacity: 0.7;
-
-}
-
-.content_row:hover {
-    background: rgba(179, 147, 162, 0.8);
-}
-
 
 table th {
-
     font-size: .85em;
     letter-spacing: .1em;
     text-transform: uppercase;
 }
 
-.select-css {
+#select-css {
     display: none;
 
 }
 
 .delete-button {
-    display: inline;
-}
-.delete-button:active input {
-    visibility: visible;
+    display: none;
 }
 
-
-.edit-button {
-
-    opacity: 0;
-  
-
-
-}
-
+/*FALTA QUE AL PULSAR EL LINK SE VISUALICE EL BUTTON*/
 
 @media screen and (max-width: 600px) {
 
 
-    /*max 600px
+    /*max 600px*/
     table {
 
         border: 0;
         margin-left: 0.5em;
         margin-right: 0.5em;
 
-    }*/
+    }
 
     table caption {
         font-size: 1.3em;
@@ -255,13 +172,13 @@ table th {
     }
 
     table tr {
-        border: none;
+        border-bottom: 3px solid #ddd;
         display: block;
         margin-bottom: .625em;
     }
 
     table td {
-        border: none;
+        border-bottom: 1px solid #ddd;
         display: block;
         font-size: .8em;
         text-align: right;
@@ -280,7 +197,7 @@ table th {
 }
 
 
-/*-----------------------------------Mobile version--------------------------------------*/
+/*Mobile version*/
 
 @media (max-width: 48rem) {
     #tab {
@@ -316,7 +233,7 @@ table th {
     }
 
     /*----------------------------------------*/
-    .select-css {
+    #select-css {
         display: block;
         font-size: 16px;
         font-family: 'Arial', sans-serif;
